--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -27,14 +27,9 @@ RUN cargo build --release --locked
 RUN rm -rf src
 
 COPY --chown=builder:builder src ./src
-COPY --chown=builder:builder database ./database
 
 ENV CARGO_NET_GIT_FETCH_WITH_CLI=true
-ENV RUSTFLAGS="-C target-cpu=native -C opt-level=3 -C lto=fat -C codegen-units=1 -C panic=abort"
-ENV CARGO_PROFILE_RELEASE_LTO=fat
-ENV CARGO_PROFILE_RELEASE_CODEGEN_UNITS=1
-ENV CARGO_PROFILE_RELEASE_PANIC=abort
-ENV CARGO_PROFILE_RELEASE_STRIP=true
+ENV SQLX_OFFLINE=true
 
 RUN touch src/main.rs && \
     cargo build --release --locked --target-dir ./target
@@ -62,7 +57,7 @@ LABEL org.opencontainers.image.source="https://github.com/yourusername/dark-perf
 ENV RUST_LOG=info
 ENV RUST_BACKTRACE=1
 ENV ENVIRONMENT=production
-ENV PORT=3001
+ENV PORT=8000
 
 USER 65532:65532
 WORKDIR /app
@@ -70,10 +65,7 @@ WORKDIR /app
 COPY --from=binary-prep --chown=65532:65532 /tmp/app /app/backend
 COPY --from=builder --chown=65532:65532 /home/builder/database/migrations /app/database/migrations
 
-EXPOSE 3001
-
-HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-    CMD ["/app/backend", "--health-check"] || exit 1
+EXPOSE 8000
 
 ENTRYPOINT ["/app/backend"]
 
