--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -226,7 +226,7 @@ semicolon_if_nothing_returned = "warn"
 
 [lints.rust]
 unsafe_code = "forbid"
-missing_docs = "warn"
+missing_docs = "allow"
 unused_extern_crates = "warn"
 unused_import_braces = "warn"
 
