--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "start": "vinxi start",
     "preview": "vinxi preview",
     "type-check": "tsc --noEmit",
-    "lint": "eslint src/**/*.{js,ts,tsx}",
+    "lint": "eslint src/",
     "format": "prettier --write src/**/*.{js,ts,tsx,css,scss,md}",
     "test": "vitest",
     "test:ui": "vitest --ui",
@@ -26,15 +26,17 @@
     "web-vitals": "^5.0.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@types/node": "^20.12.7",
-    "@typescript-eslint/eslint-plugin": "^7.7.1",
-    "@typescript-eslint/parser": "^7.7.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.0",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.14.0",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^8.19.0",
     "vite": "^6.3.5",
     "vitest": "^3.1.4"
   },
