--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff"
+  "theme_color": "#C13C24",
+  "background_color": "#000000"
 }
