--- a/nginx/sites-enabled/default.conf
+++ b/nginx/sites-enabled/default.conf
@@ -1,10 +1,5 @@
+# ©AngelaMos | 2025
 # Prod
-
-# WebSocket upgrade mapping
-map $http_upgrade $connection_upgrade {
-    default '';
-    websocket upgrade;
-}
 
 upstream backend_servers {
     least_conn;
@@ -14,7 +9,7 @@ upstream backend_servers {
 
 upstream frontend_servers {
     least_conn;
-    server frontend:3001 max_fails=3 fail_timeout=30s;
+    server frontend:3000 max_fails=3 fail_timeout=30s;
     keepalive 32;
 }
 
@@ -27,21 +22,26 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    
     add_header X-Powered-By "Rust+Axum, SolidJS, Nginx" always;
 
+    add_header Access-Control-Allow-Origin "*" always;
+    add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, HEAD" always;
+    add_header Access-Control-Allow-Headers "Content-Type, Authorization, Accept, User-Agent, X-Correlation-ID, X-Request-ID, X-Request-Start" always;
+    add_header Access-Control-Max-Age "86400" always;
+
+    if ($request_method = 'OPTIONS') {
+        return 204;
+    }
+
     location /api/ {
-        limit_req zone=api burst=50 nodelay;
+        limit_req zone=api burst=200 nodelay;
 
         proxy_pass http://backend_servers;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
 
         proxy_connect_timeout 5s;
         proxy_send_timeout 10s;
@@ -61,27 +61,18 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # Longer timeout for complex fractal computations
         proxy_read_timeout 120s;
         proxy_send_timeout 120s;
     }
 
-    # Vite development server assets and WebSocket
-    location /_build/ {
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         proxy_pass http://frontend_servers;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
 
-        # Disable caching for dev assets
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
-        add_header Pragma "no-cache";
-        add_header Expires "0";
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        add_header Vary "Accept-Encoding";
     }
 
     location / {
@@ -91,24 +82,12 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
-        # Handle static assets (disable caching for development)
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            proxy_pass http://frontend_servers;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            # Disable caching for development
-            add_header Cache-Control "no-cache, no-store, must-revalidate";
-            add_header Pragma "no-cache";
-            add_header Expires "0";
-        }
     }
 
-    location /v1/health {
+    location /health {
         access_log off;
-        proxy_pass http://backend_servers/v1/health;
-        proxy_connect_timeout 1s;
-        proxy_send_timeout 1s;
-        proxy_read_timeout 1s;
+        proxy_pass http://backend_servers/health;
+        proxy_connect_timeout 2s;
+        proxy_read_timeout 2s;
     }
 }
